Refactors loan registration process
Streamlines the loan registration process by switching to email-based user authentication.

This change replaces the previous ID number lookup with email verification
against the auth service, improving security and aligning with current
authentication practices. It also simplifies the validation logic and
removes redundant checks.

The tests are updated to reflect the change in authentication method
and ensure continued functionality.